improved keyboard support
add:
- ctrl+s save hotkey
- enter on all forms
